--- a/src/pages/Main/Map/Filters/Filters.scss
+++ b/src/pages/Main/Map/Filters/Filters.scss
@@ -14,6 +14,8 @@
     background-color: $color-gray;
     padding: var(--filter-padding);
     box-sizing: border-box;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     @include phone {
         width: var(--filter-width-mobile);
